<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>koi</name>
    <version>0.0.0</version>
    <description> This package allows optimizing kinematics of inspection.</description>

    <maintainer email="marc.bestmann@dlr.de">Marc Bestmann</maintainer>

    <author email="marc.bestmann@dlr.de">Marc Bestmann</author>

    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>

    <depend>ament_cmake</depend>
    <depend>builtin_interfaces</depend>
    <depend>backwards_ros</depend>
    <depend>rclcpp</depend>
    <depend>reach</depend>
    <depend>ros2_python_extension</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>